# Analytical-Chatbot

./: .gitignore  .impeccable.md  CLAUDE.md  Makefile  README.md
backend/: .env.example  pyproject.toml  sandbox-requirements.txt  trace_summary.py
backend/app/: config.py  main.py
backend/app/agent/: context.py  deep_agent.py  graph.py  persistent_state.py  router_agent.py  state.py
backend/app/api/: artifacts.py  chat.py  datasets.py  models.py  router.py  sessions.py  upload.py
backend/app/artifacts/: store.py
backend/app/data/: catalog.py  duckdb_manager.py  ingest.py
backend/app/events/: __init__.py  bus.py
backend/app/llm/: polisher.py  provider.py  registry.py
backend/app/sandbox/: config.py  executor.py  runner.py  validator.py
backend/app/skills/: registry.py
backend/data/: agent_state.sqlite
backend/sandbox_helpers/: __init__.py  charting.py  diagrams.py  tables.py
backend/tests/: conftest.py  test_agent_registry.py  test_delegate.py  test_event_bus.py  test_sub_agent.py
backend/traces/0100cfa9-e484-4bf5-adc4-323068d065d5/: 20260320_004814_b86429.json
backend/traces/01a706e6-25f7-43df-8795-7082f608e997/: 20260326_234702_c4fc58.json
backend/traces/02727c11-ef30-4ee0-be13-6773f777b8d7/: 20260321_172950_6f3541.json
backend/traces/02bfa426-5bdf-469b-aa75-4e804edf6bbb/: 20260321_172301_ec41bb.json
backend/traces/062ef854-a7ae-4844-bc0d-2b6660932cb1/: 20260321_030234_9cb55b.json
backend/traces/06322c4a-1e2b-44f1-aea7-4831a9b97d30/: 20260328_144156_a645f9.json
backend/traces/27b-chart-001/: 20260321_012137_59e2a0.json
(+331 files in other folders)
